--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 </head>
 <body>
 
-<div>container
+<div class="container">
+<div class="jumbotron">   
 <h1>Aaron Yang Period 4</h1>
+</div>
 <h2>My favorite part of Advance Web</h2>
 <p>My favorite part about Patino is that I can 
 come here everyday and learn somethig new.
