--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Quiz31</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Quiz 31</title>
+
+       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" /> 
+
 </head>
 <body>
-
-<div class="container">
+    <div class="container">
 <div class="jumbotron">   
 <h1>Aaron Yang Period 4</h1>
 </div>
 <h2>My favorite part of Advance Web</h2>
 <p>My favorite part about Patino is that I can 
-come here everyday and learn somethig new.
+come here every day and learn something new.
 It is very cool to learn new things on how to 
 not be as nervous or how to pitch and what 
 the future would look like if you wanted to 
-start a business. Many people way not know, 
+start a business. Many people may not know, 
 but Patino can help you in a lot of ways with 
 life and how to work in the real world with other people.</p>
 <h2>My least favorite part of Advanced Web</h2>
 <p>My least favorite part of Patino is that 
 We don't have a lot of activities on campus. 
-Many people don't participate on things in 
+Many people don't participate in things on 
 our school and especially sports.Also, we 
-should have gotten people that we wanted for our teams.
-<head>
-    <link> rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-</head>
+should have been placed with the people that 
+we wanted for our teams sophmore year.</p>
+
 </div>
 
 </body>
